# full-crisis

./: .gitignore  CLI_DEMO.md  CNAME  Cargo.toml  Cross.toml  MENUSTATE_SELECTION_COMPLETE.md  MENU_SELECTION_FIX.md  POPUP_SETTINGS_COMPLETE.md  build-embedded-icon-assets.py  build-for-web.py  build.rs  build_embedded_icon_assets.py  cloud-build-daemon.py  cross-compile-using-arch-container.py  cross_compile_using_arch_container.py  embed-icons-using-native-tools.py  full-crisis.x86_64-unknown-linux-gnu  index.html  kpis.json  lcloud-compile-all.py  readme.md  record-kpis.py  record_kpis.py  rootca-mgmt.py  rootca.crt  rootca_mgmt.py  rustfmt.toml  sign_release_bins.py  style.css  update-github-pages.py  update_github_pages.py  version.py
audio/: generate_chime.py  generate_intro_chime.py
cargo-cross/: Dockerfile.i686-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu
full-crisis/: Cargo.toml  build.rs
full-crisis-bin/: Cargo.toml  build.rs
full-crisis-bin/src/: main.rs
full-crisis-bin/src/cli/: mod.rs
full-crisis-web/: Cargo.toml  fc_index.html
full-crisis-web/src/: lib.rs
full-crisis/src/: err.rs  language.rs  lib.rs  main_audio.rs  native_storage.rs  native_time.rs  translations.rs  wasm32_storage.rs  wasm32_time.rs
full-crisis/src/crisis/: mod.rs  operations.rs  types.rs
full-crisis/src/game/: mod.rs
full-crisis/src/gui/: event_handlers.rs  game_window.rs  helpers.rs  mod.rs  settings.rs  styles.rs  types.rs  ui_builders.rs
full-crisis/src/gui/builders/: menu_components.rs  mod.rs
full-crisis/src/gui/views/: game.rs  menu.rs  mod.rs
full-crisis/src/input/: mod.rs
full-crisis/src/translations/: data.rs  keys.rs  mod.rs
icon/: full-crisis-icon.blend  full-crisis-splash.blend  mac-dmg-background-image.xcf
old_scripts/: embed-icons-using-native-tools.py  zig-build-all-targets.py
playable-crises/: IMAGES_README.md  README.md
playable-crises/Fire_Dispatch/: crisis.toml
playable-crises/Fire_Dispatch/scenes/: assess_casualties.toml  await_report.toml  citizen_assist.toml  command_monitoring.toml  complete_suppression.toml  contingency_planning.toml  county_backup.toml  damage_assessment.toml  detailed_report.toml  dual_emergency.toml  enhanced_response.toml  evacuation_status.toml  field_assessment.toml  full_alarm.toml  gather_details.toml  incoming_call.toml  management_contact.toml  mutual_aid.toml  political_notification.toml  precautionary_backup.toml  quick_dispatch.toml  resource_reallocation.toml  resource_standby.toml  response_monitoring.toml  standard_response.toml  successful_outcome.toml
playable-crises/Hani_Hanjours_939_Meeting/: crisis.toml
playable-crises/Inner_Struggle/: crisis.toml
playable-crises/Language_Test/: crisis.toml
playable-crises/Silent_Run/: crisis.toml
playable-crises/Storm_Landing/: crisis.toml
playable-crises/Tsunami_At_Dawn/: crisis.toml
src/: err.rs  main.rs
src/cli/: mod.rs
src/game/: mod.rs
src/gui/: mod.rs
src/system/: mod.rs
wasm32/: full_crisis_web.d.ts  full_crisis_web.js  full_crisis_web_bg.wasm.d.ts  index.html  package.json
wasm32/snippets/full-crisis-web-2105b06a95d4db05/: inline0.js
wasm32/snippets/full-crisis-web-cb863b81e43c719a/: inline0.js
wasm32/snippets/full_crisis-b38be95cd15b2f7c/: inline0.js
