[package]
name = "full-crisis"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0"
sys-locale = "0.3"
rust_iso639 = "0.0.3"

[dependencies.macroquad]
version = "0.4"


[target.x86_64-pc-windows-gnu.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[build-dependencies]
winres = "0.1"
