[package]
name = "full-crisis"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
directories = "6.0"
sys-locale = "0.3"
rust_iso639 = "0.0.3"

# File dialogues, from the hello-world iced editor
rfd = "0.13"

# Yay global variables
once_cell = "1.21.3"

ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"

[dependencies.iced]
#version = "0.13"
git = "https://github.com/iced-rs/iced.git"
features = ["wgpu", "tokio", "canvas", "image", "svg", "advanced", "highlighter"]

[dependencies.iced_renderer]
version = "*"
features = ["wgpu"]

[dependencies.iced_aw]
#version = "0.12"
git = "https://github.com/iced-rs/iced_aw.git"
features = ["tabs"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-util", "time", "net", "fs", "signal", "sync"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[build-dependencies]
winres = "0.1"

