[package]
name = "full-crisis-bin"
#version = "0.1.2"
edition = "2024"
build = "build.rs"

# This allows us to not conflict with the full-crisis library crate (no direct outputs)
# while still building a binary named "full-crisis.exe"
[[bin]]
name = "full-crisis"
path = "src/main.rs"

[dependencies]
full_crisis = { path = "../full-crisis" }

directories = "6.0"
sys-locale = "0.3"
rust_iso639 = "0.0.3"

# File dialogues, from the hello-world iced editor
rfd = "0.13"

dark-light = "2"
homedir = "0.3.5"

# Yay global variables
once_cell = "1.21.3"

ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"
serde_json = "1.0"

[dependencies.iced]
#version = "0.13"
git = "https://github.com/iced-rs/iced.git"
features = ["wgpu", "tokio", "canvas", "image", "svg", "advanced", "highlighter" ]

[dependencies.iced_renderer]
version = "*"
features = ["wgpu", "tiny-skia",]

[dependencies.iced_aw]
#version = "0.12"
git = "https://github.com/iced-rs/iced_aw.git"
features = ["tabs"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-util", "time", "net", "fs", "signal", "sync"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

# TODO revisit macos app menu integration l8ter
# [target.'cfg(target_os = "macos")'.dependencies]
# winit = "0.29"
# objc = "0.2"
# cocoa = "0.25"

[build-dependencies]
winres = "0.1"

