[package]
name = "full-crisis-web"
#version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
full_crisis =  { path = "../full-crisis" }
wasm-bindgen = { version = "0.2" }
wee_alloc =    { version = "0.4" }
console_error_panic_hook = { version = "0.1" }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
default-features = false
features = ["webgl", "wgpu", "tiny-skia", "web-colors", "auto-detect-theme", "smol", "fira-sans", ]


[package.metadata.wasm-pack.profile.release]
# See https://github.com/WebAssembly/binaryen/blob/version_117/test/lit/help/wasm-opt.test
wasm-opt = [
    "-Os",
]

