[package]
name = "full_crisis"
version = "0.1.3"
edition = "2024"

# This is only a rust library, we need full-crisis-bin or full-crisis-web to
# create an application.
[lib]
crate-type = ["lib"]

[dependencies]
isolang = "2.4"

# Used to embed all ./playable-crises/
#rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
rust-embed = { git = "https://github.com/Jeffrey-P-McAteer/rust-embed.git", features = ["interpolate-folder-path"] }


# Yay global variables
once_cell = "1.21.3"

twox-hash = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"

[dependencies.iced]
#version = "0.13"
git = "https://github.com/iced-rs/iced.git"
#features = ["wgpu", "tokio", "canvas", "image", "svg", "advanced", "highlighter" ]
# "highlighter" pulls in onig_sys which does not compile for wasm32-unknown-unknown
default-features = false
features = ["image", "svg", "advanced", "wgpu", "tiny-skia", "web-colors", "auto-detect-theme", "smol", ]

[dependencies.iced_renderer]
version = "*"
features = ["wgpu", "tiny-skia", ]

[dependencies.iced_aw]
#version = "0.12"
git = "https://github.com/iced-rs/iced_aw.git"
features = ["tabs"]


# Override for web to use js random backends
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console", "Navigator", "Window", "Location"] }

# Override for desktop to use system locale detection
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { version = "5.0" }
sys-locale = "0.3"

